--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ function goTo(pg){
 function initApp(){
   renderDash();renderGpChips();renderProf();
   // Admin: inserisci qui la tua email per attivare il pannello
-  const ADMIN="";
+  const ADMIN="domrss10@gmail.com";
   if(usr.email===ADMIN||ADMIN==="")document.getElementById('adminSec').style.display='block';
   renderHC();
 }
